2014-01-14  Miguel de Dios <miguel.dedios@artica.es>
	
	* godmode/reporting/reporting_builder.list_items.php: fixed the
	list of modules from inventory item.

2014-01-13  Sergio Martin <sergio.martin@artica.es>

	* include/functions_config.php: Added to the header warnings the
	checking of some php.ini values for incident #393

2014-01-13  Sergio Martin <sergio.martin@artica.es>

	* include/graphs/functions_flot.php: fix unecessary space under the
	area graphs when menu is not setted. If is setted, this space is
	for the overview graph. Incident #499

2014-01-10  Miguel de Dios <miguel.dedios@artica.es>
	
	* include/functions_visual_map.php: fixed the show simple values in
	the visualconsole editor from the old Pandora versions.
	
	Fixes: #2407

2014-01-09  Sergio Martin <sergio.martin@artica.es>

	* include/graphs/flot/pandora.flot.js
	include/graphs/functions_flot.php: Fixed problem with the overview
	graph in IE9 for incident #477

2014-01-09  Miguel de Dios <miguel.dedios@artica.es>
	
	* include/functions.php: added function "https_is_running".
	
	* include/functions_gis.php, operation/gis_maps/render_view.php,
	operation/gis_maps/public_console.php, godmode/setup/gis_step_2.php:
	fixed the urls for google maps when it is running in https mode.
	
	Fixes: #2403

2014-01-09  Junichi Satoh  <junichi@rworks.jp>

	* godmode/servers/plugin.php: Fixed that unexpected strings are set
	in parameter macro fields when multi-byte characters are entered.

2014-01-08  Miguel de Dios <miguel.dedios@artica.es>
	
	* general/header.php: fixed the empty action with trying to write
	some thing in the global search field when it is search anything.

2014-01-08  Miguel de Dios <miguel.dedios@artica.es>
	
	* include/functions_gis.php: fixed the agent name label.
	
	Fixes: #2401

2014-01-08  Miguel de Dios <miguel.dedios@artica.es>
	
	* include/functions_gis.php: fixed with a dirty hack the bug about
	the google maps with own old version of openlayer.
