@@ -1,3 +1,8 @@
+2014-01-14  Sergio Martin <sergio.martin@artica.es>
+
+	* include/functions_groups.php: Fix group parameter in links
+	of groups view on mobile console. Incident #491
+
 2014-01-14  Miguel de Dios <miguel.dedios@artica.es>
 	
 	* godmode/reporting/reporting_builder.list_items.php: fixed the
